2008-02-25  Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql, pandoradb.sql: Modified, added and altered 
	SQL structure. This is a final aproximation to 1.4 version. Probably
	more changes are coming in the next future before to close 1.4 database
	definition.

2008-02-21  Sancho Lerena <slerena@gmail.com>

	* Added new structures for predictive module, plugin server, and other
	planned functionalities for 1.4.x version.

	* Merged code from 1.3.1 branch.

2008-02-19  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/tactical.php: Solved small visual issue with rows.
	
	* include/languages/language_en.php: Changed CASE in menu texts.

2008-02-16  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_*.php: Improved usability adding titles in
	images.

2008-02-12  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_agente.php, general/header.php: small changes
	to solve small problem with header in IE7.

2008-02-12  Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/language_en.php: Corrected typo.

2008-02-11  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/agentes/module_manager.php: Closed some html tags.
	Added title for the action icons.

2008-02-09  Raul Mateos  <raulofpandora@gmail.com>

	* pandoradb_data.sql: Solved stupid bug with ending ";". Deleted duplicated
	insert.

2008-02-01  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_*.php: Added code to help admin user
	to create agents and alerts, adding buttons to godmode.
	
	* include/languages/language_es_es.php: Updated text.

2008-01-21 Sancho Lerena <slerena@gmail.com>

	* operation/visual_console/render_view.php: Applied some patches from
	guruevi to improve graphic size and tooltil. Label is still displayed on
	graphic canvas (it could be deleted in the future using an optional switch)

2008-01-11 Sancho Lerena <slerena@gmail.com>

	* config.inc.php: Updated version number for config template.
